00_common/rustfs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rustfs
  labels:
    istio-injection: enabled
