00_common/rustfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs-route
  namespace: rustfs
spec:
  hostnames:
  - rustfs.local.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rustfs-svc
      port: 9001
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
